--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^14.4.3",
     "apexcharts": "^3.35.5",
     "axios": "^1.6.2",
+    "express": "^4.18.2",
     "formik": "^2.2.9",
     "framer-motion": "^7.3.6",
     "history": "^5.3.0",
